Ao entrar no sistema, deve ser perguntado o nome da pessoa através de um prompt()

--- a/index.html
+++ b/index.html
@@ -86,14 +86,13 @@
                     <h4>Imagem de referência</h4>
                 </div>
                 <input id="post-encomenda" type="text" placeholder="Insira o link da imagem"/>
-                <button onclick="post()">Confirmar pedido</button>
+                <button onclick="confirmarPedido()">Confirmar pedido</button>
           
             </div>
         </div>
        </section>
-       <aside>
-
-       </aside>
+       <section>    
+       </section>
     </main>
     <footer class="text">
         <h1>Ultimos pedidos</h1>
