implementacao do get e post para encomendar blusa

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <div class="imagem-referencia">
                     <div class="titulos"><h4>Imagem de referência</h4></div>
 
-                    <input id="post-encomenda" type="text" placeholder="Insira o link da imagem" onchange="verificarImagem();"/>
+                    <input id="post-encomenda" type="text" placeholder="Insira o link da imagem" onkeyup="verificarImagem();"/>
                     <button id="botao" onclick="confirmarPedido()">Confirmar pedido</button>
 
                 </div>
